--- a/gb/17/10/22/n9757655.md
+++ b/gb/17/10/22/n9757655.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jfduzj338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jfduzj338/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jfduzj338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jfduzj338/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jfduzj338/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jfduzj338/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jfduzj338/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jfduzj338/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/jfduzj338/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/jfduzj338/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jfduzj338/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jfduzj338/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jfduzj338/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>班农：硅谷盗走了美国人的机遇和财富</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/10/GettyImages-864150588-600x400.jpg" />
 <h6>白宫前首席策略师、川普前高级顾问班浓（图）周五（20日）出席加州共和党大会。他在演讲中说，硅谷作为科技教主，盗走了美国人的工作、财富和机遇。(FREDERIC J. BROWN/AFP/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2017年10月22日讯】（大纪元记者梁砚编译报导）白宫前首席策略师、<ahref="https://github.com/jfduzj338/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>前高级顾问班农（Steve Bannon）周五（20日）出席<ahref="https://github.com/jfduzj338/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E.md#1">加州</a>共和党大会。他在演讲中说，<ahref="https://github.com/jfduzj338/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7.md#1">硅谷</a>作为“科技教主”，盗走了美国人的工作、财富和机遇。他表示，加州已经严重受到“进步左翼”的影响，未来堪忧。</p>
-<p>Politico新闻网报导，班农在集会上说：“他们（<ahref="https://github.com/jfduzj338/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7.md#1">硅谷</a>）希望获得来自自由社会的一切好处……一切由国际化带来的好处”，包括由此带来的利润丰厚的贸易和资本收益，然而为此付出成本和代价的却是美国人。</p>
+	<p>【大纪元2017年10月22日讯】（大纪元记者梁砚编译报导）白宫前首席策略师、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>前高级顾问班农（Steve Bannon）周五（20日）出席<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E.md#1">加州</a>共和党大会。他在演讲中说，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7.md#1">硅谷</a>作为“科技教主”，盗走了美国人的工作、财富和机遇。他表示，加州已经严重受到“进步左翼”的影响，未来堪忧。</p>
+<p>Politico新闻网报导，班农在集会上说：“他们<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7.md#1">硅谷</a>）希望获得来自自由社会的一切好处……一切由国际化带来的好处”，包括由此带来的利润丰厚的贸易和资本收益，然而为此付出成本和代价的却是美国人。</p>
 <p>班农进入会场时，受到在场500多人的起立鼓掌和欢迎。会场提供了严格的安保措施。</p>
-<p>班农从白宫卸任后，继续回到由他创建的保守派媒体“布赖特巴特新闻”并担任执行董事长。他曾表示，离开白宫并回到这家媒体，将使他能够更加如鱼得水，捍卫<ahref="https://github.com/jfduzj338/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>新政，打击虚假报导对川普的抹黑。班农毕业于哈佛商学院，曾任高盛公司执行总监，也曾是好莱坞的一名大亨。</p>
-<p>参加<ahref="https://github.com/jfduzj338/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E.md#1">加州</a>共和党大会的与会者可以支付100美元，与班农共进晚餐，或者支付300美元，参加贵宾酒会并与班农合影。</p>
+<p>班农从白宫卸任后，继续回到由他创建的保守派媒体“布赖特巴特新闻”并担任执行董事长。他曾表示，离开白宫并回到这家媒体，将使他能够更加如鱼得水，捍卫<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>新政，打击虚假报导对川普的抹黑。班农毕业于哈佛商学院，曾任高盛公司执行总监，也曾是好莱坞的一名大亨。</p>
+<p>参加<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E.md#1">加州</a>共和党大会的与会者可以支付100美元，与班农共进晚餐，或者支付300美元，参加贵宾酒会并与班农合影。</p>
 <p>班农在演讲中，言辞犀利，直言保守派的目标不可被忘记。他批评这座向非法移民提供庇护的州“正在经历危险的事”。他说，当下的加州堪比19世纪30年代的南卡州，试图为脱离联邦“挑选他们想要的法律”。</p>
 <p>班农说：“你们是一个庇护州──请相信我，如果你们不改变这个状况，10或15年后，硅谷的人和进步左翼派将会要求加州脱离联邦。”</p>
 <p>班农表示，加州是保守派能否阻止全球化进程的关键。他敦促共和党人团结力量，争取在2018年的中期选举中有所收获。</p>
@@ -29,36 +29,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/17/10/17/n9742782.md#1">川普续推医改 两党就健保补贴达短期协议</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/17/10/20/n9752235.md#1">美参院通过2018年预算案 川普发推文祝贺</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/17/10/20/n9753348.md#1">美国参院通过预算案 股市走高美元上扬</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/17/10/20/n9754198.md#1">川普访韩 航母舰队和B-1B轰炸机全程保护</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/10/17/n9742782.md#1">川普续推医改 两党就健保补贴达短期协议</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/10/20/n9752235.md#1">美参院通过2018年预算案 川普发推文祝贺</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/10/20/n9753348.md#1">美国参院通过预算案 股市走高美元上扬</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/10/20/n9754198.md#1">川普访韩 航母舰队和B-1B轰炸机全程保护</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/18/n10859288.md#1" target="_blank">慧勉：古代官员善心理政故事数则</a></li><li><a href="https://github.com/jfduzj338/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/3/n11232059.md#1" target="_blank">大陆移民旧金山推崇法轮功：真善忍好</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/8/n10625340.md#1" target="_blank">玉清心：文革“破四旧”不堪回首 但不能遗忘</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/29/n11417416.md#1" target="_blank">美大使发推特 谴责中共迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/29/n12291106.md#1">【视频】黄历六月北京飞雪 网民：必有奇冤</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/29/n12293305.md#1">武汉坠楼护士生前留言曝光 曾曝抗疫黑幕</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/24/n12280824.md#1">【内幕】习恭维之计失效 川普发反共檄文</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/29/n12293489.md#1">【新闻看点】美澳军事合作 欧盟27国制裁中共</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/30/n12293750.md#1">【翻墙必看】蝗灾已在大陆泛滥 麻烦大了</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/28/n12289207.md#1">双方不约而同感激对方 艾成与王瞳登记结婚</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/29/n12293399.md#1">与李晨分手一年 范冰冰首谈失恋心情</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/28/n12290343.md#1">亲共举动遭炮轰 谭咏麟关闭脸书IG投奔微博</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/28/n12290665.md#1">看完长文只回一个问号 杨幂释由登上热搜榜首</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/28/n12289082.md#1">父女首搭档节目收摊 小祯宣布回归戏剧圈</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/29/n12291800.md#1">在1905年的照片中看到自己 英男相信有前世</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/28/n12288658.md#1">沉重的“7.20”——神韵艺术家回忆曾经的迫害</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/25/n12283672.md#1">【佳人传】黄氏姐妹的不同人生</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/16/n12261035.md#1">华盛顿将军系列故事：乔治·华盛顿精神</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/9/4/4/n2484963.md#1">从《清明上河图》看时代风华（下）</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jfduzj338/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jfduzj338/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/10/22/n9757655.htm">班农：硅谷盗走了美国人的机遇和财富</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/10/22/n9757655.htm">班农：硅谷盗走了美国人的机遇和财富</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jfduzj338/djy/blob/master/gb/17/10/22/n9757655.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jfduzj338/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jfduzj338/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jfduzj338/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/10/22/n9757655.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
